Mon Jun 18 21:33:58 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:

          Fixed logic for when to set log file name from config file value.

Mon Jun 18 18:08:44 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.cpp:

          Bypass the topic entity refs check when the remove flag is true,
          in which case the entire participant is being removed anyway.

Thu Jun 14 11:21:08 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DCPS/TopicReuse/tpreuse.cpp:
          Improved this test

Thu Jun 14 11:02:17 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/DataReaderImpl.cpp:
          Fixed compile error

Wed Jun 13 21:41:24 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          Changed a few missed listener pointer references.

Wed Jun 13 18:46:23 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * dds/idl/CPPTemplate.txt:
        * tests/DCPS/Rejects/DataReaderListener.cpp:
        * tests/DCPS/Rejects/publisher.cpp:

          Fixes for warnings.

Wed Jun 13 17:06:22 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * dds/idl/CPPTemplate.txt:
        * tests/DCPS/Rejects/README:
        * tests/DCPS/Rejects/subscriber.cpp:

          Fixed fuzz errors.

Wed Jun 13 16:11:58 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.cpp:

          In delete_topic(), check if a topic is used by any
          reader or writer before allowing it to be deleted.
          Fixes bugzilla bug #4045.

Wed Jun 13 15:49:14 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tools/scripts/lcov.pl:

          Fixing fuzz errors.

Wed Jun 13 14:38:48 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:

          Fix for log file name handling when ACE_TCHAR is
          a wchar_t.
